<resources>
    <string name="app_name">Daily Journal+</string>
     <string name="app_descrip">This accounting app allows you to record your
         daily transactions in the easiest way possible. It achieves easiness
         by altering the usual flow of journal entry.</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_party">Party List</string>
    <string name="title_activity_import_export">Tools</string>
    <string name="title_activity_journal">New Journal</string>
    <string name="title_activity_lock_screen">Lock Screen</string>
    <string name="title_activity_charts">Charts</string>
    <string name="title_activity_company_settings">Welcome</string>
    <string name="company_settings_welcome_msg">Welcome to %s.</string>
    <string name="company_settings_company_name">Please enter the Company or Business name</string>
    <string name="company_settings_company_name_empty_error">You must entire a company or business name. You could just enter you own name.</string>
    <string name="title_activity_erase">Erase</string>
    <string name="title_activity_start_next_year">Start Next Year</string>
    <string name="title_activity_daily_report">Daily Report</string>
    <string name="title_activity_export_printables">Export Printables</string>
    <string name="sum_pincode_val">Enter the pin code</string>
    <string name="sum_lock_time">Lock the app after how many minutes</string>
    <string name="hint_note">Write notes here....</string>
    <string name="hint_company_name">Company Name</string>
    <string name="str_num">No.</string>
    <string name="str_cr">Cr. </string>
    <string name="str_dr">Dr. </string>
    <string name="str_id">ID :</string>
    <string name="str_id_only">ID</string>
    <string name="str_new">New</string>
    <string name="str_yes">Yes</string>
    <string name="str_no">No</string>
    <string name="str_lock">Lock</string>
    <string name="str_note">Note</string>
    <string name="str_notes">Notes</string>
    <string name="str_next">Next</string>
    <string name="str_save">Save</string>
    <string name="str_edit">Edit</string>
    <string name="str_done">Done</string>
    <string name="str_date">Date</string>
    <string name="str_data">Data</string>
    <string name="str_name">Name</string>
    <string name="str_image">Image</string>
    <string name="str_start">Start</string>
    <string name="str_00.00">00.00</string>
    <string name="str_tools">Tools</string>
    <string name="str_share">Share</string>
    <string name="str_report">Report</string>
    <string name="str_party">Party</string>
    <string name="str_total">Total</string>
    <string name="str_alert">Alert!</string>
    <string name="str_enable">Enable</string>
    <string name="str_folder">Folder</string>
    <string name="str_failed">failed</string>
    <string name="str_backup">Backup</string>
    <string name="str_choose">Choose</string>
    <string name="str_delete">Delete</string>
    <string name="str_journal">Journal</string>
    <string name="str_minutes">minutes</string>
    <string name="str_pincode">Pincode</string>
    <string name="str_balance">Balance</string>
    <string name="str_download">Download</string>
    <string name="str_finished">finished</string>
    <string name="str_erase_all">Erase All</string>
    <string name="str_lock_time">Lock Time</string>
    <string name="str_preference">Preference</string>
    <string name="str_attachment"> Attachment</string>
    <string name="str_attachments"> Attachments</string>
    <string name="str_pick_a_date">Pick a Date</string>
    <string name="str_information">Information</string>
    <string name="str_add_shortcut">Add Shortcut</string>
    <string name="str_share_report">Share Report</string>
    <string name="str_select_shortcut">Select Shortcut</string>
    <string name="str_select">Select</string>
    <string name="str_google_drive">Google Drive</string>
    <string name="str_google_drive_in_house">Google Drive (In House)</string>
    <string name="str_financial_year">Financial Year</string>
    <string name="str_opening_balance">Opening balance</string>
    <string name="str_attch_delete">Attachment Deleted</string>
    <string name="str_export_printable">Export Printable</string>
    <string name="str_import_json">Import JSON Backup File</string>
	<string name="str_create_backup_in_local_storage">Create Backup in Local Storage</string>
	<string name="str_restore_backup_from_local_storage">Restore Backup from Local Storage</string>
    <string name="str_create_backup_in_google_drive">Create Backup in Google Drive</string>
    <string name="str_restore_backup_from_google_drive">Restore from Google Drive</string>
    <string name="str_import">Import</string>
    <string name="str_contact">Contact</string>
    <string name="str_phone_number">Phone Number</string>
    <string name="str_format">Format</string>
    <string name="pref_title_currency">Currency (Select country code)</string>
    <string name="str_add">Add</string>
    <string name="str_select_backup_file_to_restore">Select File to Restore</string>
    <string name="str_restore_backup_from_auto">Restore From Automatic Backup</string>
    <string name="str_auto_backup">Automatic Backup</string>
    <string name="str_enable_auto_backup">Enable Auto Backup</string>
    <string name="pref_title_auto_upload_backup_to_gdrive">Auto Upload Backup To Google Drive</string>
    <string name="pref_summary_auto_upload_backup_to_gdrive">Enabling this option will upload locally auto created backup file to your Google Drive.</string>
    <string name="str_auto_backup_interval">Auto Backup Interval</string>
    <string name="str_no_thanks">No, thanks</string>
    <string name="str_later">Later</string>
    <string name="str_rate">Rate</string>
    <string name="str_security">Security</string>
    <string name="str_unlock">Unlock</string>
    <string name="msg_share_body">Organize your accounts and cashbook in the simplest way possible with Daily Journal App</string>
    <string name="str_local_storage">Local Storage</string>
    <string name="str_thank_you">Thank you.</string>
    <string name="str_amount">Amount</string>
    <string name="str_dashboard">Dashboard</string>
    <string name="str_no_of_journal">%s Count</string>
    <string name="pref_allow_out_of_range_journal_entry">Allow out of range %s Entry</string>
    <string name="pref_summary_allow_out_of_range_journal_entry">If your financial year is April of 2008 to 2009,
        then you are allowed to add %1$s with date inside this range only. You can not add a %1$s with date May, 2009.
        However, you can enter Journal with any date by enabling this preference.</string>
    <string name="pref_ad">Advertisement</string>
    <string name="pref_ad_summary">Advertisement allows us to keep this app running free of cost to you.
        Please enable and click on ads to support us.</string>
    <string name="action_settings">Settings</string>
    <string name="str_creditor">Creditor</string>
    <string name="str_top">Top</string>
    <string name="str_debtor">Debtors</string>
    <string name="str_view">View</string>
    <string name="str_ledger_view">Ledger View</string>
    <string name="str_word_choice">Word Choice</string>
    <string name="str_given_by">Given By</string>
    <string name="str_received_by">Received By</string>
    <string name="str_debit">Debit</string>
    <string name="str_credit">Credit</string>
    <string name="str_transaction">Transaction</string>
    <string name="str_account">Account</string>
    <string name="chart_dscrptn_owe_you">that owe you</string>
    <string name="chart_dscrptn_you_owe">that you owe</string>
    <string name="str_search">Search</string>
    <string name="str_search_or_add">Search or Add new Party</string>
    <string name="str_exit">Exit</string>
    <string name="str_disclaimer">Disclaimer</string>
    <string name="str_debug">Debug</string>
    <string name="trans_party_img">transPartyImg</string>
    <string name="nav_item_journal">New Journal</string>
    <string name="nav_item_transaction">New Transaction</string>
    <string name="nav_item_preference">Preference</string>
    <string name="nav_item_tools">Tools</string>
    <string name="nav_item_tutorials">Tutorials</string>
    <string name="nav_item_party">Parties</string>
    <string name="nav_item_account">Accounts</string>
    <string name="nav_item_charts">Charts</string>
    <string name="nav_item_share">Share</string>
    <string name="nav_menu">Menu</string>
    <string name="activity_home_balance_card_title">Your Balance</string>
    <string name="user_alt_dr_format">Received</string>
    <string name="user_alt_cr_format">Given</string>
    <string name="activity_home_find_journal_by_date">Find Journal by Date</string>
    <string name="activity_home_search_journal_notes">Search Journal Notes</string>
    <string name="activity_home_backup">Backup</string>
    <string name="activity_home_charts">Charts</string>
    <string name="spanned_ledger_start_date">Start Date</string>
    <string name="spanned_ledger_end_date">End Date</string>
    <string name="spanned_ledger_find">Find Journals</string>
    <string name="activity_search_notes_search">Search Notes</string>
    <string name="activity_backup_erase_journals">Erase Journals Only</string>
    <string name="symbol_nepali_rupee">Rs.</string>
    <string name="notification_channel_name">Notification</string>
    <string name="notification_title_auto_upload_backup_to_g_drive">Uploading backup to Google Drive</string>
    <string name="select_all">Select All</string>
    <string name="error_msg_invalid_backup_file_count_selected">Please select one backup file to restore.</string>
    <string name="party_name_empty_error">Please enter the name here.</string>
    <string name="btn_attachment_with_count">Attachment (%d)</string>
    <string name="msg_journal_note_replace_comma">You have used comma in your note.
        This causes issue when exporting as Comma Separated Values (CSV) file. \n\n
        Would you like to replace all commas with semi colon?</string>
    <string-array name="tutorial_video_title">
        <item>Demo Video</item>
        <item>Local Storage Backup and Restore</item>
        <item>Export Printables</item>
        <item>How to print using Google Drive</item>
        <item>Start Next Financial Year</item>
        <item>Format Options</item>
        <item>Setting Pin code Lock</item>
        <item>Create and restore backup from Google Drive</item>
        <item>Find Journals by Date</item>
        <item>Open playlist</item>
    </string-array>
    <string-array name="tutorial_video_links">
        <item>https://youtu.be/7zkNbKmM1kE</item>
        <item>https://youtu.be/Pytg1ykSUs0</item>
        <item>https://youtu.be/n3zUlIq2mGc</item>
        <item>https://youtu.be/K0JxrVxy_d4</item>
        <item>https://youtu.be/hekPBml57fQ</item>
        <item>https://youtu.be/lfBu_0P7P98</item>
        <item>https://youtu.be/QzvSDaZyumw</item>
        <item>https://youtu.be/0Tn0Tiz-2cE</item>
        <item>https://youtu.be/BT4_s-TxDlw</item>
        <item>https://youtube.com/playlist?list=PL71y4IDEO0dPBdxEbF4nt-YTe5JyLF7-M</item>
    </string-array>
</resources>