<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/viewpager_menu_lock"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_lock_black_48dp_v21"
        android:title="@string/str_lock"
        android:orderInCategory="2"/>

    <item
        android:id="@+id/viewpager_new_picture"
        app:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_add_to_photos"
        android:title="@string/str_add"
        android:orderInCategory="1"
                 />

    <item
        android:id="@+id/viewpager_delete_picture"
		app:showAsAction="ifRoom|withText"
		android:icon="@android:drawable/ic_delete"
        android:title="@string/str_delete"
        android:orderInCategory="0"
         />

    <item
        android:id="@+id/viewpager_download_picture"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_file_download_black_24dp"
        android:title="@string/str_save"
        android:orderInCategory="3"
        />
</menu>