<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/blue_mild"
    >

    <TextView
        android:id="@+id/ledger_row_num"
        android:text="@string/str_num"
        android:layout_height="wrap_content"
        android:layout_width="@dimen/ledger_row_no_width"
        android:background="@drawable/cell_shape"
        android:padding="3dp"
        android:gravity="center"
        android:singleLine="true"
        android:maxLines="1"
        android:textSize="@dimen/text_size_medium" />

    <TextView
        android:id="@+id/ledger_row_date"
        android:text="@string/str_date"
        android:layout_height="wrap_content"
        android:layout_width="@dimen/ledger_row_width"
        android:background="@drawable/cell_shape"
        android:padding="3dp"
        android:gravity="center"
        android:singleLine="true"
        android:maxLines="1"
        android:textSize="@dimen/text_size_medium" />

    <TextView
        android:id="@+id/ledger_row_note"
        android:text="@string/str_note"
        android:layout_height="wrap_content"
        android:layout_width="@dimen/ledger_row_width"
        android:background="@drawable/cell_shape"
        android:gravity="start"
        android:padding="3dp"
        android:singleLine="true"
        android:maxLines="1"
        android:visibility="gone"
        android:textSize="@dimen/text_size_medium" />

    <TextView
        android:id="@+id/ledger_row_dr"
        android:layout_height="wrap_content"
        android:layout_width="@dimen/ledger_row_width"
        android:text="@string/str_dr"
        android:background="@drawable/cell_shape"
        android:maxLines="1"
        android:padding="3dp"
        android:singleLine="true"
        android:gravity="end"
        android:textSize="@dimen/text_size_medium" />

    <TextView
        android:id="@+id/ledger_row_cr"
        android:layout_height="wrap_content"
        android:layout_width="@dimen/ledger_row_width"
        android:text="@string/str_cr"
        android:background="@drawable/cell_shape"
        android:gravity="end"
        android:padding="3dp"
        android:singleLine="true"
        android:maxLines="1"
        android:textSize="@dimen/text_size_medium" />

    <TextView
        android:id="@+id/ledger_row_balance"
        android:layout_height="wrap_content"
        android:layout_width="@dimen/ledger_row_balance_width"
        android:text="@string/str_balance"
        android:background="@drawable/cell_shape"
        android:singleLine="true"
        android:maxLines="1"
        android:gravity="end"
        android:padding="3dp"
        android:textSize="@dimen/text_size_medium" />
</TableRow>
