<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@color/blue_mild"
        android:orientation="horizontal"
        android:padding="@dimen/activity_horizontal_margin">


        <TextView
            android:id="@+id/ledger_card_attch_no_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_edge_rect"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:text="@string/str_00.00" />

        <ImageView
            android:id="@+id/ledger_card_attch_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_margin="1dp"
            android:contentDescription="@string/str_attachment"
            android:src="@drawable/ic_attachment_black_32dp" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ledger_card_date_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/str_date"
                android:textSize="@dimen/text_size_medium" />

            <TextView
                android:id="@+id/ledger_card_note_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_note"
                android:textStyle="italic" />


        </LinearLayout>

        <TextView
            android:id="@+id/ledger_card_amount_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_00.00"
            android:textSize="@dimen/text_size_medium" />

        <TextView
            android:id="@+id/ledger_card_drcr_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_dr"
            android:textSize="@dimen/text_size_medium" />


    </LinearLayout>
</FrameLayout>