<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    >

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/toolbar"/>

    </android.support.design.widget.AppBarLayout>

    <EditText
        android:id="@+id/activity_company_settings_company_name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:hint="@string/hint_company_name"
        android:ems="10"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_financial_year"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:labelFor="@+id/activity_company_settings_date_btn"/>

    <Button
        android:id="@+id/activity_company_settings_date_btn"
        style="@style/Widget.Button_Normal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_margin="10dp"
        android:drawableLeft="@drawable/ic_today_black_24dp"
        android:ems="10" />

    <Button
        android:id="@+id/activity_company_settings_done_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:background="@drawable/button_positive"
        android:layout_margin="10dp"
        style="@style/Widget.Button_Neutral"
        android:text="@string/str_save"/>

</LinearLayout>