<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="6dp"
        app:cardCornerRadius="4dp"
        >
    <RelativeLayout
        android:id="@+id/fragment_party_detail_party_card"
        android:layout_width="@dimen/layout_width"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        >

        <ImageView
            android:id="@+id/fragment_party_detail_circle_iv"
            android:layout_width="@dimen/party_pic_width"
            android:layout_height="@dimen/party_pic_width"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="left"
            android:layout_margin="5dp"
            android:scaleType="centerCrop"
            android:transitionName="@string/trans_party_img"
            android:src="@drawable/party_default_pic" />

            <TextView
                android:id="@+id/fragment_party_detail_name_tv"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/str_party"
                android:textColor="@color/text_title"
                android:textSize="@dimen/text_size_xlarge"
                android:textStyle="bold"
                android:layout_toRightOf="@id/fragment_party_detail_circle_iv"
                android:layout_alignTop="@id/fragment_party_detail_circle_iv"
                android:layout_toEndOf="@id/fragment_party_detail_circle_iv"/>

            <TextView
                android:id="@+id/fragment_party_detail_balance_tv"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical"
                android:scrollHorizontally="true"
                android:text="@string/str_00.00"
                android:textSize="@dimen/text_size_xlarge"
                android:layout_toRightOf="@id/fragment_party_detail_circle_iv"
                android:layout_toEndOf="@id/fragment_party_detail_circle_iv"
                android:layout_below="@id/fragment_party_detail_name_tv"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="3dp"
            android:background="@color/blue"
            android:layout_below="@+id/fragment_party_detail_circle_iv"
            android:layout_alignBottom="@id/parentLayout"
            />

    </RelativeLayout>

    </android.support.v7.widget.CardView>

        <TableRow
            android:id="@+id/fragment_party_detail_header_tr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_header_shape"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/str_num"
                android:textSize="@dimen/text_size_medium"
                android:visibility="gone" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/cell_header_shape"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/str_date"
                android:textSize="@dimen/text_size_medium" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/cell_header_shape"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/str_note"
                android:textSize="@dimen/text_size_medium"
                android:visibility="gone" />

            <TextView
                android:id="@+id/activity_party_col_header_dr"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/cell_header_shape"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/str_dr"
                android:textSize="@dimen/text_size_medium" />

            <TextView
                android:id="@+id/activity_party_col_header_cr"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/cell_header_shape"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/str_cr"
                android:textSize="@dimen/text_size_medium" />
        </TableRow>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/activity_party_lv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <FrameLayout
        android:id="@+id/fragment_party_detail_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_height="15dp"/>

</LinearLayout>